# ROS2-Navbot-Simulation

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: architecture.md  engineering_notes.md  troubleshooting.md
docs/screenshots/: README.md
scripts/: install_ros_jazzy_in_distrobox.sh  record_demo.sh  run_demo.sh  setup_ubuntu_24_04.sh
src/navbot_bringup/: CMakeLists.txt  package.xml
src/navbot_bringup/config/: nav2_params.yaml  ros_gz_bridge.yaml  ros_gz_scan_bridge.yaml  rviz_config.rviz
src/navbot_bringup/launch/: demo.launch.py  nav.launch.py  sim.launch.py
src/navbot_bringup/maps/: warehouse_map.pgm  warehouse_map.yaml
src/navbot_bringup/params/: README.md
src/navbot_bringup/test/: test_launch_options.py
src/navbot_bringup/worlds/: warehouse_world.sdf
src/navbot_description/: CMakeLists.txt  package.xml
src/navbot_description/launch/: description.launch.py
src/navbot_description/meshes/: README.md
src/navbot_description/models/navbot/: model.sdf
src/navbot_description/urdf/: navbot.urdf
src/navbot_mission/: package.xml  setup.cfg  setup.py
src/navbot_mission/config/: goals.yaml
src/navbot_mission/navbot_mission/: __init__.py  goal_loader.py  metrics_logger.py  multi_goal_nav.py  odom_distance_tracker.py  scan_frame_republisher.py  synthetic_scan_publisher.py
src/navbot_mission/test/: test_goal_loader.py  test_metrics_logger.py  test_multi_goal_nav.py  test_odom_distance_tracker.py  test_scan_frame_republisher.py
