<?xml version="1.0"?>
<package format="3">
  <name>navbot_description</name>
  <version>0.1.0</version>
  <description>Robot description files for the NavBot differential-drive robot.</description>
  <author email="nonso@users.noreply.github.com">Nonso</author>
  <maintainer email="nonso@users.noreply.github.com">Nonso</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
