<?xml version="1.0"?>
<package format="3">
  <name>navbot_mission</name>
  <version>0.1.0</version>
  <description>Multi-goal Nav2 mission node and logging utilities.</description>
  <author email="nonso@users.noreply.github.com">Nonso</author>
  <maintainer email="nonso@users.noreply.github.com">Nonso</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
